--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,48 +7,35 @@
     android:background="@color/black"
     tools:context=".pages.LoginPage">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="78dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="104dp"
-        android:text="Team RNG"
-        android:textColor="@color/white"
-        android:textSize="@android:dimen/app_icon_size"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <EditText
         android:id="@+id/editTextEmailAddress"
         android:layout_width="263dp"
         android:layout_height="40dp"
         android:layout_marginStart="90dp"
-        android:layout_marginTop="91dp"
+        android:layout_marginTop="68dp"
         android:layout_marginEnd="112dp"
         android:background="@android:color/background_light"
         android:ems="10"
         android:hint="Enter Email here..."
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.277"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <EditText
         android:id="@+id/editTextPassword"
         android:layout_width="264dp"
         android:layout_height="44dp"
         android:layout_marginStart="90dp"
-        android:layout_marginTop="39dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="112dp"
         android:background="@android:color/background_light"
         android:ems="10"
         android:hint="Enter Password here..."
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.29"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />
 
@@ -76,6 +63,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="291dp"
+        android:layout_height="69dp"
+        android:layout_marginTop="128dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/banner_logo" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
