--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -84,7 +84,7 @@
         app:layout_constraintVertical_bias="0.614" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/logoutButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="99dp"
