LeaderBoard Backend done

--- a/app/src/main/res/layout/activity_display_leader_board.xml
+++ b/app/src/main/res/layout/activity_display_leader_board.xml
@@ -8,15 +8,87 @@
     android:background="@color/black">
 
     <TextView
-        android:id="@+id/LeaderBoardText"
+        android:id="@+id/textViewEasy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
-        android:layout_marginEnd="128dp"
-        android:text="TextView"
+        android:layout_marginTop="152dp"
+
+        android:layout_marginEnd="152dp"
+        android:textColor="@color/white"
+        android:textSize="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/leaderboardText" />
+
+    <TextView
+        android:id="@+id/leaderboardText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="LeaderBoard: "
         android:textColor="@color/white"
         android:textSize="50dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewMedium"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="116dp"
+        android:layout_marginTop="152dp"
+        android:textColor="@color/white"
+        android:textSize="50dp"
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintTop_toTopOf="@+id/textViewEasy" />
+
+    <TextView
+        android:id="@+id/textViewHard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="192dp"
+
+        android:layout_marginTop="108dp"
+        android:textColor="@color/white"
+        android:textSize="30dp"
+        app:layout_constraintStart_toEndOf="@+id/textView6"
+        app:layout_constraintTop_toBottomOf="@+id/textViewMedium" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="164dp"
+        android:text="Easy"
+        android:textColor="@color/white"
+        android:textSize="30dp"
+        app:layout_constraintTop_toBottomOf="@+id/leaderboardText"
+        tools:layout_editor_absoluteX="48dp" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:text="Medium"
+        android:textColor="@color/white"
+        android:textSize="30dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        tools:layout_editor_absoluteX="32dp" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="132dp"
+        android:layout_marginRight="144dp"
+        android:text="Hard"
+        android:textColor="@color/white"
+        android:textSize="30dp"
+        app:layout_constraintRight_toLeftOf="@+id/textViewHard"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
