--- a/app/src/main/res/layout-land/memory_game_difficulty_selector.xml
+++ b/app/src/main/res/layout-land/memory_game_difficulty_selector.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/GhostWhite">
+    android:background="@color/Black">
 
     <TextView
         android:id="@+id/memoryGameTitle"
@@ -12,7 +12,7 @@
         android:layout_height="58dp"
         android:text="Memory Game"
         android:textAlignment="center"
-        android:textColor="@color/Black"
+        android:textColor="@color/GhostWhite"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +27,7 @@
         android:layout_height="44dp"
         android:text="Select Difficulty"
         android:textAlignment="center"
-        android:textColor="@color/Black"
+        android:textColor="@color/GhostWhite"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,42 +35,24 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.441" />
 
-    <TableLayout
-        android:layout_width="731dp"
-        android:layout_height="70dp"
-        android:stretchColumns="*"
+    <Button
+        android:id="@+id/hardButton"
+        android:layout_width="177dp"
+        android:layout_height="62dp"
+        android:layout_marginEnd="100dp"
+        android:text="Hard"
+        app:layout_constraintBaseline_toBaselineOf="@+id/easyButton"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/easyButton"
+        android:layout_width="177dp"
+        android:layout_height="62dp"
+        android:layout_marginStart="112dp"
+        android:text="Easy"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.767">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <Button
-                android:id="@+id/easyButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="10dp"
-                android:text="Easy" />
-
-            <Button
-                android:id="@+id/hardButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="10dp"
-                android:text="Hard" />
-        </TableRow>
-
-    </TableLayout>
+        app:layout_constraintVertical_bias="0.793" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
