--- a/app/src/main/res/layout/circles.xml
+++ b/app/src/main/res/layout/circles.xml
@@ -228,8 +228,8 @@
         android:id="@+id/play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="300dp"
-        android:layout_marginBottom="88dp"
+        android:layout_marginEnd="388dp"
+        android:layout_marginBottom="112dp"
         android:text="play"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -238,8 +238,8 @@
         android:id="@+id/playText"
         android:layout_width="367dp"
         android:layout_height="44dp"
-        android:layout_marginEnd="156dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="236dp"
+        android:layout_marginBottom="44dp"
         android:text="Click the play button to start"
         android:textAlignment="center"
         android:textColor="@android:color/white"
@@ -251,14 +251,16 @@
         android:id="@+id/headerText"
         android:layout_width="416dp"
         android:layout_height="63dp"
-        android:layout_marginEnd="132dp"
-        android:layout_marginBottom="248dp"
+        android:layout_marginEnd="164dp"
+        android:layout_marginBottom="260dp"
         android:text="Trail Making Test"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.761"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
