--- a/app/src/main/res/layout/help_selection_page.xml
+++ b/app/src/main/res/layout/help_selection_page.xml
@@ -7,7 +7,7 @@
     android:background="#101010">
 
     <Button
-        android:id="@+id/TMTBtn"
+        android:id="@+id/TMTBtnHelp"
         android:layout_width="115dp"
         android:layout_height="72dp"
         android:layout_marginTop="251dp"
@@ -16,34 +16,49 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/memoryGameButton"
+        app:layout_constraintStart_toEndOf="@+id/memoryGameButtonHelp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/reactionBtn"
+        android:id="@+id/reactionBtnHelp"
         android:layout_width="115dp"
         android:layout_height="72dp"
         android:layout_marginTop="251dp"
         android:layout_marginBottom="88dp"
         android:text="@string/Reaction"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/memoryGameButton"
+        app:layout_constraintEnd_toStartOf="@+id/memoryGameButtonHelp"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/memoryGameButton"
+        android:id="@+id/memoryGameButtonHelp"
         android:layout_width="115dp"
         android:layout_height="72dp"
         android:layout_marginTop="251dp"
         android:layout_marginBottom="88dp"
         android:text="@string/Memory"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/TMTBtn"
+        app:layout_constraintEnd_toStartOf="@+id/TMTBtnHelp"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/reactionBtn"
+        app:layout_constraintStart_toEndOf="@+id/reactionBtnHelp"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="168dp"
+        android:layout_height="79dp"
+        android:layout_marginBottom="64dp"
+        android:text="Help"
+        android:textColor="@color/White"
+        android:textSize="48sp"
+        app:layout_constraintBottom_toTopOf="@+id/memoryGameButtonHelp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.547"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.555" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
