--- a/app/src/main/res/layout/reaction_game_selection.xml
+++ b/app/src/main/res/layout/reaction_game_selection.xml
@@ -21,7 +21,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/reactionEasy"
+        android:id="@+id/reactionBtn"
         android:layout_width="115dp"
         android:layout_height="72dp"
         android:layout_marginStart="160dp"
