--- a/app/src/main/res/layout/reaction_help_page.xml
+++ b/app/src/main/res/layout/reaction_help_page.xml
@@ -23,20 +23,16 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
-        android:id="@+id/headerText"
-        android:layout_width="664dp"
-        android:layout_height="248dp"
-        android:scrollbars="vertical"
-        android:text="Trail Making Test Tutorial"
-        android:textAlignment="center"
-        android:textColor="@android:color/white"
-        android:textSize="24sp"
+        android:id="@+id/header2"
+        android:layout_width="486dp"
+        android:layout_height="203dp"
+        android:text="TextView"
+        android:textColor="#FFFFFF"
+        android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.496" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
