--- a/app/src/main/res/layout/leaderboard_selection_page.xml
+++ b/app/src/main/res/layout/leaderboard_selection_page.xml
@@ -10,26 +10,20 @@
         android:id="@+id/TMT"
         android:layout_width="115dp"
         android:layout_height="72dp"
-        android:layout_marginTop="251dp"
-        android:layout_marginBottom="88dp"
         android:text="@string/Trail_test"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/memoryGameButton"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.498" />
 
     <Button
         android:id="@+id/reactionBtn"
         android:layout_width="115dp"
         android:layout_height="72dp"
-        android:layout_marginTop="251dp"
-        android:layout_marginBottom="88dp"
         android:text="@string/Reaction"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/memoryGameButton"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,13 +31,11 @@
         android:id="@+id/memoryGameButton"
         android:layout_width="115dp"
         android:layout_height="72dp"
-        android:layout_marginTop="251dp"
-        android:layout_marginBottom="88dp"
         android:text="@string/Memory"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/TMT"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/reactionBtn"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.501" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
