--- a/app/src/main/res/layout-land/memory_game_difficulty_selector.xml
+++ b/app/src/main/res/layout-land/memory_game_difficulty_selector.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Black">
+    android:background="@color/Black"
+    tools:ignore="MissingDefaultResource">
 
     <TextView
         android:id="@+id/memoryGameTitle"
